--- a/index.html
+++ b/index.html
@@ -23,46 +23,46 @@
                         <div class="group-2">
                             <div class="div-wrapper"><div class="text-wrapper">1000.00</div></div>
                             <div class="group-3">
-                                <img class="img-2" src="https://flagsapi.com/BR/flat/64.png" />
+                                <img id="imagem1" class="img-2" src="https://flagsapi.com/BR/flat/64.png" />
                                 <select id="select-pais">
-                                    <option value="US">Estados Unidos</option>
-                                    <option value="EC">Equador</option>
-                                    <option value="SV">El Salvador</option>
-                                    <option value="PA">Panamá</option>
+                                    <option class="opcao" value="US">Estados Unidos</option>
+                                    <option class="opcao" value="EC">Equador</option>
+                                    <option class="opcao" value="SV">El Salvador</option>
+                                    <option class="opcao" value="PA">Panamá</option>
 
-                                    <option value="DE">Alemanha</option>
-                                    <option value="FR">França</option>
-                                    <option value="ES">Espanha</option>
-                                    <option value="IT">Itália</option>
-                                    <option value="PT">Portugal</option>
-                                    <option value="IE">Irlanda</option>
-                                    <option value="AT">Áustria</option>
-                                    <option value="GR">Grécia</option>
-                                    <option value="BE">Bélgica</option>
-                                    <option value="FI">Finlândia</option>
+                                    <option class="opcao" value="DE">Alemanha</option>
+                                    <option class="opcao" value="FR">França</option>
+                                    <option class="opcao" value="ES">Espanha</option>
+                                    <option class="opcao" value="IT">Itália</option>
+                                    <option class="opcao" value="PT">Portugal</option>
+                                    <option class="opcao" value="IE">Irlanda</option>
+                                    <option class="opcao" value="AT">Áustria</option>
+                                    <option class="opcao" value="GR">Grécia</option>
+                                    <option class="opcao" value="BE">Bélgica</option>
+                                    <option class="opcao" value="FI">Finlândia</option>
 
-                                    <option value="JP">Japão</option>
+                                    <option class="opcao" value="JP">Japão</option>
 
-                                    <option value="GB">Reino Unido</option>
-                                    <option value="FK">Ilhas Malvinas</option>
-                                    <option value="GI">Gibraltar</option>
+                                    <option class="opcao" value="GB">Reino Unido</option>
+                                    <option class="opcao" value="FK">Ilhas Malvinas</option>
+                                    <option class="opcao" value="GI">Gibraltar</option>
 
-                                    <option value="AU">Austrália</option>
-                                    <option value="KI">Kiribati</option>
-                                    <option value="NR">Nauru</option>
+                                    <option class="opcao" value="AU">Austrália</option>
+                                    <option class="opcao" value="KI">Kiribati</option>
+                                    <option class="opcao" value="NR">Nauru</option>
 
-                                    <option value="CA">Canadá</option>
+                                    <option class="opcao" value="CA">Canadá</option>
 
-                                    <option value="CH">Suíça</option>
-                                    <option value="LI">Liechtenstein</option>
+                                    <option class="opcao" value="CH">Suíça</option>
+                                    <option class="opcao" value="LI">Liechtenstein</option>
 
-                                    <option value="CN">China</option>
+                                    <option class="opcao" value="CN">China</option>
 
-                                    <option value="NZ">Nova Zelândia</option>
-                                    <option value="CK">Ilhas Cook</option>
-                                    <option value="NU">Niue</option>
+                                    <option class="opcao" value="NZ">Nova Zelândia</option>
+                                    <option class="opcao" value="CK">Ilhas Cook</option>
+                                    <option class="opcao" value="NU">Niue</option>
 
-                                    <option value="HK">Hong Kong</option>
+                                    <option class="opcao" value="HK">Hong Kong</option>
 
                                 </select>
                             </div>
@@ -73,46 +73,46 @@
                         <div class="group-4">
                             <div class="div-wrapper"><div class="text-wrapper-4">736.70</div></div>
                             <div class="group-3">
-                                <img class="img-2" src="https://flagsapi.com/BR/flat/64.png" />
+                                <img id="imagem2" class="img-2" src="https://flagsapi.com/BR/flat/64.png" />
                                 <select id="select-ps">
-                                    <option value="US">Estados Unidos</option>
-                                    <option value="EC">Equador</option>
-                                    <option value="SV">El Salvador</option>
-                                    <option value="PA">Panamá</option>
+                                    <option class="opcao" value="US">Estados Unidos</option>
+                                    <option class="opcao" value="EC">Equador</option>
+                                    <option class="opcao" value="SV">El Salvador</option>
+                                    <option class="opcao" value="PA">Panamá</option>
 
-                                    <option value="DE">Alemanha</option>
-                                    <option value="FR">França</option>
-                                    <option value="ES">Espanha</option>
-                                    <option value="IT">Itália</option>
-                                    <option value="PT">Portugal</option>
-                                    <option value="IE">Irlanda</option>
-                                    <option value="AT">Áustria</option>
-                                    <option value="GR">Grécia</option>
-                                    <option value="BE">Bélgica</option>
-                                    <option value="FI">Finlândia</option>
+                                    <option class="opcao" value="DE">Alemanha</option>
+                                    <option class="opcao" value="FR">França</option>
+                                    <option class="opcao" value="ES">Espanha</option>
+                                    <option class="opcao" value="IT">Itália</option>
+                                    <option class="opcao" value="PT">Portugal</option>
+                                    <option class="opcao" value="IE">Irlanda</option>
+                                    <option class="opcao" value="AT">Áustria</option>
+                                    <option class="opcao" value="GR">Grécia</option>
+                                    <option class="opcao" value="BE">Bélgica</option>
+                                    <option class="opcao" value="FI">Finlândia</option>
 
-                                    <option value="JP">Japão</option>
+                                    <option class="opcao" value="JP">Japão</option>
 
-                                    <option value="GB">Reino Unido</option>
-                                    <option value="FK">Ilhas Malvinas</option>
-                                    <option value="GI">Gibraltar</option>
+                                    <option class="opcao" value="GB">Reino Unido</option>
+                                    <option class="opcao" value="FK">Ilhas Malvinas</option>
+                                    <option class="opcao" value="GI">Gibraltar</option>
 
-                                    <option value="AU">Austrália</option>
-                                    <option value="KI">Kiribati</option>
-                                    <option value="NR">Nauru</option>
+                                    <option class="opcao" value="AU">Austrália</option>
+                                    <option class="opcao" value="KI">Kiribati</option>
+                                    <option class="opcao" value="NR">Nauru</option>
 
-                                    <option value="CA">Canadá</option>
+                                    <option class="opcao" value="CA">Canadá</option>
 
-                                    <option value="CH">Suíça</option>
-                                    <option value="LI">Liechtenstein</option>
+                                    <option class="opcao" value="CH">Suíça</option>
+                                    <option class="opcao" value="LI">Liechtenstein</option>
 
-                                    <option value="CN">China</option>
+                                    <option class="opcao" value="CN">China</option>
 
-                                    <option value="NZ">Nova Zelândia</option>
-                                    <option value="CK">Ilhas Cook</option>
-                                    <option value="NU">Niue</option>
+                                    <option class="opcao" value="NZ">Nova Zelândia</option>
+                                    <option class="opcao" value="CK">Ilhas Cook</option>
+                                    <option class="opcao" value="NU">Niue</option>
 
-                                    <option value="HK">Hong Kong</option>
+                                    <option class="opcao" value="HK">Hong Kong</option>
 
                                 </select>
                             </div>
@@ -128,5 +128,6 @@
         </div>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
