fiz as bandeiras e o botao swap funcionarem

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                         <div class="overlap-group-wrapper">
                             <div class="div">
                                 <img class="line" src="icons/img_line-1.svg">
-                                <button class="botton-swap" onclick="alert('ajustar o JavaScript para que ele troque os países de ordem')"></button>
+                                <button class="botton-swap" ></button>
                             </div>
                         </div>
                         <div class="group-2">
-                            <div class="div-wrapper"><div class="text-wrapper">1000.00</div></div>
+                            <div class="div-wrapper"><input class="text-wrapper"></div>
                             <div class="group-3">
                                 <img id="imagem1" class="img-2" src="https://flagsapi.com/BR/flat/64.png" />
                                 <select id="select-pais">
